fix: remove unnecessary white space, reordering

--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,34 @@
 @import url('reset.css');
 @import url('https://fonts.googleapis.com/css?family=Gugi:400');
-/*  */
+
+.a11y-hidden {
+  margin-top: 0;
+  height: 0;
+  background-color: violet;
+  overflow: hidden;
+}
+
+body *, body::before, body::after {
+  margin: 0 auto;
+  text-decoration: none;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Gugi', cursive;
+  font-size: 13px;
+}
+
 .header {
-  background-color: #090909;
-  height: 15vh;
   position: relative;
-}
-
-
-.logout {
-  top: 10px;
-}
-
-.logout button{
-  color: #E6E5E6;
-  border:none;
+  height: 15vh;
   background-color: #090909;
-  border-bottom: 1px solid #E6E5E6;
 }
 
 .header-logo {
   position: absolute;
-  left: 23px;
   top: 23px;
+  left: 23px;
   width: 60px;
   height:70px;
 }
@@ -39,44 +45,41 @@
   right: 20px;
   font-size: 17px;
 }
-/* .header-logo img{
-  width: 150px;
-  height: 120px;
-  object-fit: cover;
-} */
-body *, body::before, body::after {
-  text-decoration: none;
-  box-sizing: border-box;
-  margin: 0 auto;
-}
-body {
-  font-family: 'Gugi', cursive;
-  font-size: 13px;
-}
-.main {
-  background-color: #C93F60;
-  height: 70vh;
-  display: flex;
+
+.logout button{
   position: relative;
+  top: 10px;
+  color: #E6E5E6;
+  border:none;
+  border-bottom: 1px solid #E6E5E6;
+  background-color: #090909;
 }
+
 .main::before {
   position: absolute;
+  display: block;
   content: "";
+  top: 5%;
   width: 100%;
   height: 3px;
-  background-color: #E6E5E6;
-  display: block;
-  top: 5%;
   z-index: 0;
+  background-color: #E6E5E6;
+}
 
+.main {
+  position: relative;
+  display: flex;
+  height: 70vh;
+  background-color: #C93F60;
 }
 
 .main-greeting {
   position:absolute;
-  color: #e7ecee;
-  right: calc(50% - 158px);
   top: -12.5vh;
+  right: calc(50% - 158px);
+  color: #e7ecee;
 }
+
 .main-greeting-hello {
   font-size: 2.5rem;
 }
@@ -85,8 +88,8 @@ body {
   display: block;
   font-size: 18px;
   line-height: 1.3333;
-  border: none;
   color: #E6E5E6;
+  border: none;
   border-bottom: 2px solid #E6E5E6;
   outline: none;
   background: transparent;
@@ -97,57 +100,54 @@ body {
   color: #E6E5E6;
 }
 
-
-.a11y-hidden {
-  background-color: violet;
-  height: 0px;
-  margin-top: 0;
-  overflow: hidden;
-}
 .polaroid-slider {
-  z-index: 1;
+  position: relative;
   margin: auto;
   width: 1110px;
   height: 550px;
+  z-index: 1;
   overflow: hidden;
-  position: relative;
 }
+
 .polaroids {
   position: absolute;
-  left: 0;
   top: 50%;
-  transform: translateY(-50%);
+  left: 0;
   width: 2280px;
+  transform: translateY(-50%);
   transition: 0.5s ease-out;
 }
+
 .polaroid {
-  float: left;
   position: relative;
+  float: left;
   margin-right: 30px;
   padding: 30px 25px;
+  width: 350px;
+  height: 450px;
   border-radius: 5px;
-  width:350px;
-  height:450px;
-  padding:30px 25px;
   background-color: #E6E5E6;
   transition: 0.5s ease-out;
 }
+
 .polaroid.active{
   transform : translateY(100%);
   transition: 0.5s ease-out;
 }
+
 .polaroid-image {
-  background-color: #E69C88;
-  /* background-color: #fff; */
   width: 300px;
   height: 300px;
+  background-color: #E69C88;
   overflow: hidden;
 }
+
 .image-view {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
+
 .polaroid-form {
   padding-top: 15px;
   height: 90px;
@@ -156,9 +156,9 @@ body {
 }
 
 .polaroid-form input{
-  border-radius: 5px;
   float: right;
   border: none;
+  border-radius: 5px;
   color: black;
 }
 
@@ -167,42 +167,54 @@ body {
   font-size: 1.5rem;
 }
 
+.location-input{
+  position: relative;
+  top: 4px;
+}
 
 .heart {
   position: absolute;
-  bottom: 130px;
   right: 37px;
+  bottom: 130px;
   width: 30px;
   height:27px;
   object-fit: cover;
   z-index: 30;
 }
+
 .heart:hover{
   opacity: 0.5;
   cursor: pointer;
 }
+
 .heart.active{
   border: none;
 }
+
 .delete-button {
   position: absolute;
   top: -50px;
   right: calc(50% - 15px);
   width: 30px;
   height: 70px;
-  z-index: 50;
   border: none;
   border-radius: 3px;
+  z-index: 50;
   background-color: #D8B270;
 }
+
 .footer {
   height: 15vh;
   width: 100%;
   background-color: #090909;
 }
+
 .footer address{
-  bottom: 0px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
   margin: 0 auto;
+  color: #E6E5E6;
 }
 
 .carousel-left:focus {
@@ -210,11 +222,10 @@ body {
 }
 
 .carousel-left:hover {
-  background-color: #E6E5E6;
   color: #090909;
   opacity: 0.5;
   transition: 0.3s;
-  
+  background-color: #E6E5E6;
 }
 
 .carousel-right:focus {
@@ -222,44 +233,39 @@ body {
 }
 
 .carousel-right:hover {
-  background-color: #E6E5E6;
   color: #090909;
   opacity: 0.5;
   transition: 0.3s;
-  
+  background-color: #E6E5E6;
 }
 
 .carousel-left {
-  text-align: center;
-  color: #e7ecee;
-  background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
-  border: none;
-  border-radius: 50%;
+  left: 10px;
+  bottom: 50%;
   width: 50px;
   height: 50px;
-  bottom: 50%;
-  left: 10px;
+  text-align: center;
+  color: #e7ecee;
+  border: none;
+  border-radius: 50%;
   cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.5);
   outline: 0;
 }
 
-
-
-
 .carousel-right {
-  text-align: center;
   position: absolute;
-  color: #e7ecee;
-  background-color: rgba(0, 0, 0, 0.5);
-  position: absolute;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-  border: none;
-  border-radius: 50%;
+  right: 10px;
+  bottom: 50%;
   width: 50px;
   height: 50px;
-  bottom: 50%;
-  right: 10px;
+  text-align: center;
+  color: #e7ecee;
+  border: none;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.5);
+  outline: 0;
 }
 
 @media all and (min-width: 1951px) {
